# the_royal_scientist

./: LICENSE  README.md  map.excalidraw  pyproject.toml
src/the_royal_scientist/: __main__.py  characters.py  computer.py  game.py  items.py  rooms.py
