[project]
name = "the_royal_scientist"
version = "1.0.0"
description = "A text adventure game where you play as Dr. WD Gaster, the royal scientist of the underground."
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"

authors = [
	{ name = "Paya Maroufi", email = "h2o.Drop2010+github@gmail.com" },
]

dependencies = [
	"richeradventurelib @ https://github.com/Tinkering-Townsperson/richeradventurelib/releases/download/v1.2.1.post1/richeradventurelib-1.2.1.post1-py3-none-any.whl"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
